# rust_balanced_brackets

./: Cargo.toml  readme.md
src/: balanced_brackets.rs  lib.rs  main.rs
